--- a/style.css
+++ b/style.css
@@ -7,12 +7,27 @@
     padding-left: 5px;
     position:relative;
     display: inline;
-    width:70px;
-    height:100px;
+    float: left;
+    /*width:80px;*/
+    /*height:70px;*/
     margin-left: 10px;
+    overflow: auto;
+}
 
+h1 {
+    font-size: 1.1em;
+    clear:both;
+    float:none;
 }
 
 h2 {
     margin-top: 1.0em;
+    display:block;
+    float: left;
+    clear:both;
+    float:none;
+}
+
+set {
+    background-color: #ggggg;
 }
